国旗、傀儡アイコンの修正

--- a/localisation/_geacps_autonomy_system_l_english.yml
+++ b/localisation/_geacps_autonomy_system_l_english.yml
@@ -17,6 +17,7 @@
  
 #その他
  condominium:0 "共同統治領"
+ junior_partner_colony:0 "植民地"
  junior_partner_state:0 "同君連合下位国"
  leased_territory:0 "租借地"
  mandate:0 "委任統治領"
