--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -15,20 +15,30 @@
  PARTY_high_commissioner_office_long:0 "高等弁務官事務所"
  PARTY_independent_labour_party:0 "独立労働党"
  PARTY_independent_labour_party_long:0 "独立労働党"
+ PARTY_independent_politician:0 "無所属"
+ PARTY_independent_politician_long:0 "無所属"
  PARTY_labour_party:0 "労働党"
  PARTY_labour_party_long:0 "労働党"
  PARTY_liberal_party:0 "自由党"
  PARTY_liberal_party_long:0 "自由党"
  PARTY_military_dictatorship:0 "軍事政権"
  PARTY_military_dictatorship_long:0 "軍事政権"
+ PARTY_nationalist_party:0 "国民党"
+ PARTY_nationalist_party_long:0 "国民党"
+ PARTY_nationalists_party:0 "国民党"
+ PARTY_nationalists_party_long:0 "国民党"
  PARTY_national_alliance:0 "国民同盟"
  PARTY_national_alliance_long:0 "国民同盟"
+ PARTY_national_front:0 "国民戦線"
+ PARTY_national_front_long:0 "国民戦線"
  PARTY_national_liberal_party:0 "国民自由党"
  PARTY_national_liberal_party_long:0 "国民自由党"
  PARTY_people's_party:0 "人民党"
  PARTY_people's_party_long:0 "人民党"
  PARTY_radical_party:0 "急進党"
  PARTY_radical_party_long:0 "急進党"
+ PARTY_revival_party:0 "復興党"
+ PARTY_revival_party_long:0 "復興党"
  PARTY_socialist_workers_party:0 "社会主義労働者党"
  PARTY_socialist_workers_party_long:0 "社会主義労働者党"
  
@@ -104,6 +114,16 @@
  PARTY_inner_mongolian_people's_revolutionary_party_long:0 "内モンゴル人民革命党"
  PARTY_menggu_political_council:0 "蒙古政務委員会"
  PARTY_menggu_political_council_long:0 "蒙古政務委員会"
+ 
+#PER-ペルシャ, イラン
+ PARTY_iran_democrat_party:0 "民主党"
+ PARTY_iran_democrat_party_long:0 "イラン民主党"
+ PARTY_iran_novin_party:0 "新イラン党"
+ PARTY_iran_novin_party_long:0 "新イラン党"
+ PARTY_iran_people_rastakhiz_party:0 "復活党"
+ PARTY_iran_people_rastakhiz_party_long:0 "イラン人民復活党"
+ PARTY_iran_tudeh_party:0 "トゥーデ党"
+ PARTY_iran_tudeh_party_long:0 "イラン・トゥーデ党"
  
 #SIA-シャム, タイ
  PARTY_free_thai_movement:0 "自由タイ運動"
