--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -125,15 +125,21 @@
  CHI_imperial_overseas_territory:0 "$OVERLORDADJ$領支那"
  CHI_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領支那"
  CHI_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領支那"
- CHI_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- CHI_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- CHI_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ CHI_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ CHI_junior_partner_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ CHI_junior_partner_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  CHI_ENG_junior_partner_state:0 "大英帝国"
  CHI_ENG_junior_partner_state_DEF:0 "大英帝国"
- CHI_ENG_junior_partner_state_ADJ:0 "英"
+ CHI_ENG_junior_partner_state_ADJ:0 "大英"
  CHI_JAP_junior_partner_state:0 "大和帝国"
  CHI_JAP_junior_partner_state_DEF:0 "大和帝国"
- CHI_JAP_junior_partner_state_ADJ:0 "和"
+ CHI_JAP_junior_partner_state_ADJ:0 "大和"
+ CHI_MAN_junior_partner_state:0 "大清帝国"
+ CHI_MAN_junior_partner_state_DEF:0 "大清帝国"
+ CHI_MAN_junior_partner_state_ADJ:0 "大清"
+ CHI_MON_junior_partner_state:0 "大元帝国"
+ CHI_MON_junior_partner_state_DEF:0 "大元帝国"
+ CHI_MON_junior_partner_state_ADJ:0 "大元"
  
  GEO_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
  GEO_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
@@ -158,12 +164,12 @@
  IND_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  IND_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  IND_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- IND_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- IND_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- IND_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- IND_JAP_junior_partner_state:0 "$OVERLORDADJ$領印度帝国"
- IND_JAP_junior_partner_state_DEF:0 "$OVERLORDADJ$領印度帝国"
- IND_JAP_junior_partner_state_ADJ:0 "$OVERLORDADJ$領印度"
+ IND_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ IND_junior_partner_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ IND_junior_partner_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ IND_JAP_junior_partner_colony:0 "$OVERLORDADJ$領印度帝国"
+ IND_JAP_junior_partner_colony_DEF:0 "$OVERLORDADJ$領印度帝国"
+ IND_JAP_junior_partner_colony_ADJ:0 "$OVERLORDADJ$領印度"
  
  KAZ_soviet_member_republic:0 "カザフ・$OVERLORDADJ$共和国"
  KAZ_soviet_member_republic_DEF:0 "カザフ・$OVERLORDADJ$共和国"
@@ -806,12 +812,12 @@
  ETH_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  ETH_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  ETH_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- ETH_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- ETH_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- ETH_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- ETH_JAP_junior_partner_state:0 "$OVERLORDADJ$領越日比亜帝国"
- ETH_JAP_junior_partner_state_DEF:0 "$OVERLORDADJ$領越日比亜帝国"
- ETH_JAP_junior_partner_state_ADJ:0 "$OVERLORDADJ$領越日比亜"
+ ETH_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ ETH_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ ETH_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ ETH_JAP_junior_partner_colony:0 "$OVERLORDADJ$領越日比亜帝国"
+ ETH_JAP_junior_partner_colony_DEF:0 "$OVERLORDADJ$領越日比亜帝国"
+ ETH_JAP_junior_partner_colony_ADJ:0 "$OVERLORDADJ$領越日比亜"
  ETH_imperial_member:0 "$OVERLORDADJ$領越日比亜王国"
  ETH_imperial_member_DEF:0 "$OVERLORDADJ$領越日比亜王国"
  ETH_imperial_member_ADJ:0 "$OVERLORDADJ$領越日比亜"
@@ -1199,12 +1205,12 @@
  BRA_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  BRA_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  BRA_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- BRA_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- BRA_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
- BRA_junior_partner_state:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- BRA_JAP_junior_partner_state:0 "$OVERLORDADJ$領伯剌西爾帝国"
- BRA_JAP_junior_partner_state_DEF:0 "$OVERLORDADJ$領伯剌西爾帝国"
- BRA_JAP_junior_partner_state_ADJ:0 "$OVERLORDADJ$領伯剌西爾"
+ BRA_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ BRA_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$帝国"
+ BRA_junior_partner_colony:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ BRA_JAP_junior_partner_colony:0 "$OVERLORDADJ$領伯剌西爾帝国"
+ BRA_JAP_junior_partner_colony_DEF:0 "$OVERLORDADJ$領伯剌西爾帝国"
+ BRA_JAP_junior_partner_colony_ADJ:0 "$OVERLORDADJ$領伯剌西爾"
  BRA_imperial_member:0 "$OVERLORDADJ$伯州王国"
  BRA_imperial_member_DEF:0 "$OVERLORDADJ$領伯州王国"
  BRA_imperial_member_ADJ:0 "$OVERLORDADJ$領伯州"
