--- a/localisation/_geacps_music_l_english.yml
+++ b/localisation/_geacps_music_l_english.yml
@@ -20,6 +20,7 @@
  Hijos_del_Pueblo:0 "Hijos del Pueblo"
  
 #ja-日本語
+ JAP_music_album:0 "日本放送協会"
  Aiba_Shingunka:0 "愛馬進軍歌"
  Hotaru_No_Hikari:0 "蛍の光"
  Kigen_Nisen_Roppyaku_Nen:0 "紀元二千六百年"
