--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -202,6 +202,7 @@
  
 #国民精神
  JAP_high_defence_state_system:0 "高度国防国家体制"
+ JAP_privy_council:0 "枢密院"
  JAP_planning_institute:0 "企画院"
  JAP_active_military_service_for_ministers_of_war:0 "軍部大臣現役武官制"
  JAP_presidency_of_the_house_of_representatives:0 "衆議統裁"
