自由都市ベルリン

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1095,6 +1095,10 @@
  ATS_DEF:0 "アトス"
  ATS_ADJ:0 "アトス"
  
+ BRL:0 "ベルリン"
+ BRL_DEF:0 "ベルリン"
+ BRL_ADJ:0 "ベルリン"
+ 
  CRI:0 "クリミア"
  CRI_DEF:0 "クリミア"
  CRI_ADJ:0 "クリミア"
