--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1657,6 +1657,9 @@
  ATS_monastic_republic:0 "アトス修道士共和国"
  ATS_monastic_republic_DEF:0 "アトス修道士共和国"
  
+ BRL_free_city:0 "自由都市ベルリン"
+ BRL_free_city_DEF:0 "自由都市ベルリン"
+ 
  CRI_peoples_republic:0 "クリミア人民共和国"
  CRI_peoples_republic_DEF:0 "クリミア人民共和国"
  CRI_republic:0 "クリミア共和国"
