--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -648,14 +648,14 @@
  STATE_647:0 "帛琉諸島"
  STATE_648:0 "南鳥島"
  STATE_649:0 "ガラパゴス諸島"
- STATE_650:0 "熱田島"
+ STATE_650:0 "東昭北諸島"
  STATE_651:0 "ウファ"
  STATE_652:0 "オレンブルク"
  STATE_653:0 "スヴェルドロフスク"
  STATE_654:0 "ゴルノ・アルタイ"
  STATE_655:0 "北樺太"
  STATE_656:0 "クウェート"
- STATE_657:0 "浦潮斯徳"
+ STATE_657:0 "ウラジオストク"
  STATE_658:0 "アブダビ"
  STATE_659:0 "アデン"
  STATE_660:0 "赤道アフリカ"
@@ -941,7 +941,7 @@
  STATE_940:0 "モマ"
  STATE_941:0 "ヴェルフネコルィムスク"
  STATE_942:0 "スレドネコルィムスク"
- STATE_943:0 "山崎諸島"#山崎保代
+ STATE_943:0 "西昭北諸島"
  STATE_944:0 "パハン"
  STATE_945:0 "セランゴール"
  STATE_946:0 "ヌグリ・スンビラン"
@@ -989,8 +989,8 @@
  STATE_988:0 "グレーター・ロンドン"
  STATE_989:0 "コロンビア特別区"
  STATE_990:0 "モスクワ市"
- STATE_991:0 "西ベルリン"
- STATE_992:0 "東ベルリン"
+ STATE_991:0 "ベルリン西部"
+ STATE_992:0 "ベルリン東部"
  STATE_993:0 "ローマ"
  STATE_994:0 "宇都宮"
  STATE_995:0 "長野"
