--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -5,8 +5,8 @@
  VICTORY_POINTS_6103:0 "ロンドン"
  VICTORY_POINTS_3957:0 "コロンビア特別区"
  VICTORY_POINTS_6380:0 "モスクワ"
- VICTORY_POINTS_6521:0 "西ベルリン"
- VICTORY_POINTS_13238:0 "東ベルリン"
+ #VICTORY_POINTS_6521:0 "ベルリン"
+ VICTORY_POINTS_13238:0 "ベルリン"
  VICTORY_POINTS_9904:0 "ローマ"
  
 #主要都市
@@ -19,7 +19,6 @@
  VICTORY_POINTS_10011:0 "対馬"
  VICTORY_POINTS_7145:0 "隠岐諸島"
  VICTORY_POINTS_9952:0 "佐渡"
- VICTORY_POINTS_12207:0 "山崎諸島"
  VICTORY_POINTS_13026:0 "南鳥島"
  VICTORY_POINTS_1158:0 "佐世保"
  VICTORY_POINTS_692:0 "ミュンヘン"
