ややこしいし今日から君はコンゴブラザヴィルね

--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -716,6 +716,15 @@
  CAR_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  CAR_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
+ CGB_dominion:0 "コンゴ自治領"
+ CGB_dominion_DEF:0 "コンゴ自治領"
+ CGB_colony:0 "$OVERLORDADJ$領コンゴ植民地"
+ CGB_colony_DEF:0 "$OVERLORDADJ$領コンゴ植民地"
+ CGB_colony_ADJ:0 "$OVERLORDADJ$領コンゴ"
+ CGB_overseas_territory:0 "$OVERLORDADJ$領コンゴ"
+ CGB_overseas_territory_DEF:0 "$OVERLORDADJ$領コンゴ"
+ CGB_overseas_territory_ADJ:0 "$OVERLORDADJ$領コンゴ"
+ 
  CHA_dominion:0 "$NONIDEOLOGY$自治領"
  CHA_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  CHA_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
@@ -1009,15 +1018,6 @@
  NMB_mandate:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
  NMB_mandate_DEF:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
  NMB_mandate_ADJ:0 "$OVERLORDADJ$領南西アフリカ"
- 
- RCG_dominion:0 "$NONIDEOLOGY$自治領"
- RCG_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- RCG_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- RCG_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- RCG_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- RCG_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- RCG_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- RCG_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  RWA_dominion:0 "$NONIDEOLOGY$自治領"
  RWA_dominion_DEF:0 "$NONIDEOLOGY$自治領"
