--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -478,6 +478,10 @@
  CAR_DEF:0 "中央アフリカ"
  CAR_ADJ:0 "中央アフリカ"
  
+ CGB:0 "コンゴブラザヴィル"
+ CGB_DEF:0 "コンゴブラザヴィル"
+ CGB_ADJ:0 "コンゴブラザヴィル"
+ 
  CHA:0 "チャド"
  CHA_DEF:0 "チャド"
  CHA_ADJ:0 "チャド"
@@ -585,10 +589,6 @@
  NMB:0 "ナミビア"
  NMB_DEF:0 "ナミビア"
  NMB_ADJ:0 "ナミビア"
- 
- RCG:0 "コンゴ"
- RCG_DEF:0 "コンゴ"
- RCG_ADJ:0 "コンゴ"
  
  RWA:0 "ルワンダ"
  RWA_DEF:0 "ルワンダ"
