--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -830,6 +830,13 @@
  CAR_republic:0 "中央アフリカ共和国"
  CAR_republic_DEF:0 "中央アフリカ共和国"
  
+ CGB_republic:0 "コンゴブラザヴィル共和国"
+ CGB_republic_DEF:0 "コンゴブラザヴィル共和国"
+ CGB_republic_total_socialism:0 "コンゴブラザヴィル人民共和国"
+ CGB_republic_total_socialism_DEF:0 "コンゴブラザヴィル人民共和国"
+ CGB_republic_radical_socialism:0 "コンゴブラザヴィル人民共和国"
+ CGB_republic_radical_socialism_DEF:0 "コンゴブラザヴィル人民共和国"
+ 
  CHA_republic:0 "チャド共和国"
  CHA_republic_DEF:0 "チャド共和国"
  
@@ -972,13 +979,6 @@
  
  NMB_republic:0 "ナミビア共和国"
  NMB_republic_DEF:0 "ナミビア共和国"
- 
- RCG_republic:0 "コンゴ共和国"
- RCG_republic_DEF:0 "コンゴ共和国"
- RCG_republic_total_socialism:0 "コンゴ人民共和国"
- RCG_republic_total_socialism_DEF:0 "コンゴ人民共和国"
- RCG_republic_radical_socialism:0 "コンゴ人民共和国"
- RCG_republic_radical_socialism_DEF:0 "コンゴ人民共和国"
  
  RWA_kingdom:0 "ルワンダ王国"
  RWA_kingdom_DEF:0 "ルワンダ王国"
