C式縦長国家

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -202,12 +202,19 @@
  
 #国民精神
  JAP_high_defence_state_system:0 "高度国防国家体制"
+ JAP_high_defence_state_system_desc:0 "この秋に当り世界情勢に即応しつつ能く支那事変の処理を完遂すると共に、進んで世界新秩序の建設に指導的役割を果す為には、国家国民の総力を最高度に発揮してこの大事業に集中し如何なる事態が発生するとも独自の立場に於て迅速果敢且有効適切に之に対処し得るやう高度国防国家の体制へ整へねばならぬ。"
  JAP_privy_council:0 "枢密院"
+ JAP_privy_council_desc:0 "枢密院は、枢密顧問により組織される天皇の諮問機関。"
  JAP_planning_institute:0 "企画院"
+ JAP_planning_institute_desc:0 "企画院は、日本における戦前期の内閣直属の物資動員・重要政策の企画立案機関である。"
  JAP_active_military_service_for_ministers_of_war:0 "軍部大臣現役武官制"
- JAP_suppression_of_ideas_by_the_security_law:0 "治安維持法による思想弾圧"
+ JAP_active_military_service_for_ministers_of_war_desc:0 "軍部大臣現役武官制とは、大日本帝国憲法下の日本において制定されていた、軍部大臣の就任資格を現役の大将・中将に限定する制度である。"
+ JAP_suppression_of_ideas_by_the_security_law:0 "治安維持法"
+ JAP_suppression_of_ideas_by_the_security_law_desc:0 "治安維持法は、国体や私有財産制を否定する運動を取り締まることを目的として制定された日本の法律。"
  JAP_victory_in_the_greater_east_asia_war:0 "大東亜戦争に勝利"
- JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亜会議と大東亜共同宣言"
+ JAP_victory_in_the_greater_east_asia_war_desc:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。\n戦前、日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し、南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。\n我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
+ JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亞會議と大東亞共同宣言"
+ JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration_desc:0 "大東亞會議は、1943年11月5日-11月6日に東京で開催されたアジア地域の首脳会議。同年5月31日に御前会議で決定された大東亜政略指導大綱に基づき開催された。\n当時の日本の同盟国や、日本が大東亜戦争で旧宗主国を放逐したことにより独立されたアジア諸国の国政最高責任者を招請して行われた。そこでは、大東亜共栄圏の綱領ともいうべき大東亞共同宣言が採択された。日本は第2回目の大東亜会議を開催する計画を持っていたが、戦局の泥沼化に伴って開催困難となり、昭和20年5月には代替として駐日特命全権大使や駐日代表による「大使会議」が開催された。"#こちらの文章は、当MODの通史との整合性が取れなくなる可能性が存在している為、今後修正される可能性が高いです。
  JAP_Martial_law:0 "戒嚴令"
  JAP_A_great_raccoon_who_cares_for_his_country:0 "国を想う大狸"
  JAP_Sake_is_Yonai_or_Yonai_is_sake:0 "酒が米内か、米内が酒か"
