--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,13 +1,13 @@
 ﻿l_english:
 #国家方針
- JAP_The_fallen_sunrise:0 "落ちぶれた日の出"
- JAP_Victory_in_the_China_Incident:0 "支那事変で勝利"
  JAP_1-22_Incident:0 "一・二二事件"
+ JAP_Organise_a_meeting_of_the_chief_ministers:0 "重臣会議を開催する"
+ JAP_Cabinet_meeting:0 "閣議を開く"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
- JAP_Naval_officer_s_purge:0 "海軍士官を粛軍"
- JAP_Agrarian_watchdog:0 "農本主義者を監視"
+ JAP_Trial_of_naval_officers:0 "海軍士官の裁判"
+ JAP_Arrest_of_agronomists:0 "農本主義者を逮捕"
+ JAP_Trial_of_Imperialist_officers:0 "皇道派将校の裁判"
  JAP_Stability_of_the_situation:0 "事態の安定"
- JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Keisuke_Okada:0 "岡田啓介"
  JAP_1:0 ""
  JAP_2:0 ""
