イタリアの州を調整

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -846,7 +846,7 @@
  STATE_845:0 "ヴェネツィアナ"
  STATE_846:0 "ザクセン＝アンハルト"
  STATE_847:0 "南ハノーファー＝ブラウンシュヴァイク"
- STATE_848:0 "フリウリ＝ヴェネツィア・ジュリア"
+ STATE_848:0 "トリエステ"
  STATE_849:0 "イストラ"
  STATE_850:0 "スレム"
  STATE_851:0 "オシエク＝バラニャ"
@@ -1243,3 +1243,7 @@
  STATE_1242:0 "チカロフスク"
  STATE_1243:0 "アシャンティ"
  STATE_1244:0 "黄金海岸北部地域"
+ STATE_1245:0 "フリウリ"
+ STATE_1246:0 "ゴリツィア"
+ STATE_1247:0 "コペル"
+ STATE_1248:0 "ウマグ"
