--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -20,7 +20,7 @@
  MON_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MEN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MAN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。\n戦前、日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し、南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。\n我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
+ JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
  AST_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  
  TUR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
