--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,8 +1,11 @@
 ﻿l_english:
 #国家方針
  JAP_1-22_Incident:0 "一・二二事件"
+ JAP_1-22_Incident_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
  JAP_Organise_a_meeting_of_the_chief_ministers:0 "重臣会議を開催する"
+ JAP_Organise_a_meeting_of_the_chief_ministers_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
  JAP_Cabinet_meeting:0 "閣議を開く"
+ JAP_Cabinet_meeting_desc:0 "一・二二事件を受けて閣議を開き、早急に対応しなければならない。"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
  JAP_Trial_of_naval_officers:0 "海軍士官の裁判"
  JAP_Arrest_of_agronomists:0 "農本主義者を逮捕"
@@ -239,20 +242,28 @@
  
 #イベント
  geacps_JAP.1.t:0 "大日本帝國"
- geacps_JAP.1.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。 戦前, 日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。 天皇陛下万歳！大日本帝国万歳！"
- geacps_JAP.1.a:0 "天皇陛下万歳！"
+ geacps_JAP.1.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。"
+ geacps_JAP.1.a:0 "天皇陛下万歳！大日本帝国万歳！"
  geacps_JAP.2.t:0 "一・二二事件の発生"
- geacps_JAP.2.d:0 "昭和21年1月22日、陸軍青年将校らと一部の農本主義思想家、海軍の青年将校たちが帝都にてクーデターを起こし、銃撃された東条首相は重体になられた..."
+ geacps_JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、武装した海軍青年士官らが徒党を組み、帝都にてクーデターを起こした。\n本件で標的にされた東條英機首相は、銃撃され重体になられた..."
  geacps_JAP.2.a:0 "叛乱軍を捕らえよ！"
  geacps_JAP.3.t:0 "臨時代理"
- geacps_JAP.3.d:0 "一・二二事件と未だ続く志那事変の対処の為にも直ぐに臨時代理を決める必要がある。\n臨時代理としては、内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
- geacps_JAP.3.a:0 "東條の腹心・分身の安藤紀三郎に"
+ geacps_JAP.3.d:0 "一・二二事件と未だに続く志那事変の対処の為にも、臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
+ geacps_JAP.3.a:0 "東條の腹心の安藤紀三郎に"
  geacps_JAP.3.b:0 ""欠点がない"重光葵に"
- geacps_JAP.4.t:0 "日本内戦の予感"
- geacps_JAP.4.d:0 "A"
- geacps_JAP.4.a:0 "A"
- geacps_JAP.4.b:0 "B"
- geacps_JAP.4.c:0 "C"
+ geacps_JAP.4.t:0 "重臣会議"
+ geacps_JAP.4.d:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
+ geacps_JAP.4.a:0 "陸軍の奏薦を"
+ geacps_JAP.4.b:0 "海軍の奏薦を"
+ geacps_JAP.4.c:0 "軍部の意見なんぞ無視してしまえ..."
+ geacps_JAP.5.t:0 "閣議"
+ geacps_JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が行われた。\n内務大臣の安藤紀三郎は戒嚴令の施行を主張したが、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的に速やかな鎮圧を望んでいる昭和天皇の意向を受け、戒嚴令の施行は決定された。"
+ geacps_JAP.5.a:0 "決まりだな"
+ geacps_JAP.100.t:0 "日本内戦の予感"
+ geacps_JAP.100.d:0 "A"
+ geacps_JAP.100.a:0 "A"
+ geacps_JAP.100.b:0 "B"
+ geacps_JAP.100.c:0 "C"
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
@@ -269,8 +280,8 @@
  geacps_JAP.003.c:0 "空軍"
  
 #ディシジョン
- JAP_1-22_Incident:0 "一・二二事件"
- JAP_1-22_Incident_desc:0 "憲兵によると、我が国における反政府運動が激化しようとしているらしい。\n具体的にどのような人物、もしくは組織が裏に潜んでいるかという事は掴めてはいないものの、帝都の襲撃又は占拠等の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
+ JAP_Coup_detat_in_the_offing:0 "クーデターの予感"
+ JAP_Coup_detat_in_the_offing_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
  Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
  Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件の発生"
  JAP_national_policy_research_outline:0 "国策研究大綱"
