--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -1,31 +1,31 @@
 ﻿l_english:
 #ローディング
- LOADING_GUI:0 "製作中……"
- LOADING_HISTORY:0 "製作中……"
- LOADING_DATABASES:0 "製作中……"
- LOADING_MAP_SPRITES:0 "製作中……"
- AUTOSAVING:0 "製作中……"
- AUTOSAVING_OOS_DUMP:0 "製作中…… \n$DUMP_NAME$"
- LOAD_GFX_PDXMAP_SHADERS:0 "製作中……"
- LOAD_GFX_PDXMAP_TERRAIN:0 "製作中……"
- LOAD_GFX_PDXMAP_BORDERS:0 "製作中……"
- LOAD_GFX_PDXMAP_TEXTURES:0 "製作中……"
- LOAD_GFX_PDXMAP_TREES:0 "製作中……"
- LOAD_GFX_PDXMAP_RIVERS:0 "製作中……"
- LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "製作中……"
- LOAD_INIT:0 "製作中……"
- LOAD_EVENTS:0 "製作中……"
- LOAD_GFX:0 "製作中……"
- LOAD_FLAGS:0 "製作中……"
- PROC_FLAGS:0 "製作中……"
- CREATING_PROVINCE:0 "製作中……"
- EXECUTE_HISTORY:0 "製作中……"
- CREATING_CHKSUM:0 "製作中……"
- GENERATING_GRADIENT_BORDERS:0 "製作中……"
- PRECALC_NAVAL_DIST:0 "製作中……"
- INIT_MAP_LOGIC:0 "製作中……"
- INIT_GAMESTATE:0 "製作中……"
- FE_LOADING_HISTORY:0 "製作中……"
+ LOADING_GUI:0 "制作中..."
+ LOADING_HISTORY:0 "制作中..."
+ LOADING_DATABASES:0 "制作中..."
+ LOADING_MAP_SPRITES:0 "制作中..."
+ AUTOSAVING:0 "制作中..."
+ AUTOSAVING_OOS_DUMP:0 "制作中... \n$DUMP_NAME$"
+ LOAD_GFX_PDXMAP_SHADERS:0 "制作中..."
+ LOAD_GFX_PDXMAP_TERRAIN:0 "制作中..."
+ LOAD_GFX_PDXMAP_BORDERS:0 "制作中..."
+ LOAD_GFX_PDXMAP_TEXTURES:0 "制作中..."
+ LOAD_GFX_PDXMAP_TREES:0 "制作中..."
+ LOAD_GFX_PDXMAP_RIVERS:0 "制作中..."
+ LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "制作中..."
+ LOAD_INIT:0 "制作中..."
+ LOAD_EVENTS:0 "制作中..."
+ LOAD_GFX:0 "制作中..."
+ LOAD_FLAGS:0 "制作中..."
+ PROC_FLAGS:0 "制作中..."
+ CREATING_PROVINCE:0 "制作中..."
+ EXECUTE_HISTORY:0 "制作中..."
+ CREATING_CHKSUM:0 "制作中..."
+ GENERATING_GRADIENT_BORDERS:0 "制作中..."
+ PRECALC_NAVAL_DIST:0 "制作中..."
+ INIT_MAP_LOGIC:0 "制作中..."
+ INIT_GAMESTATE:0 "制作中..."
+ FE_LOADING_HISTORY:0 "制作中..."
  
 #メニュー
  MENU_HOMEPAGE:0 "Greater East Asia Co-Prosperity Sphere Wiki"
