--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -99,4 +99,4 @@
  LOADING_TIP_97: "\n- "
  LOADING_TIP_98: "\n- "
  LOADING_TIP_99: "\n- "
- LOADING_TIP_100: "\n- "
+ LOADING_TIP_100: "いつになったらこのMOD制作は終わるのだろうか...\n- とあるMODの制作者"
