--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -7,6 +7,7 @@
  JAP_Cabinet_meeting:0 "閣議を開く"
  JAP_Cabinet_meeting_desc:0 "一・二二事件を受けて閣議を開き、早急に対応しなければならない。"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
+ JAP_Declaration_of_martial_law_desc:0 "賊軍に対する迅速対処の為、昭和天皇も戒嚴令の施行を支持された。"
  JAP_Trial_of_naval_officers:0 "海軍士官の裁判"
  JAP_Arrest_of_agronomists:0 "農本主義者を逮捕"
  JAP_Trial_of_Imperialist_officers:0 "皇道派将校の裁判"
