--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -296,6 +296,9 @@
  JAP_ui_loyalty_header:0 "忠誠"
  JAP_ui_popularity_header:0 "支持率"
  JAP_a_royal_visit:0 "天皇の行幸"
+ 
+ ####################################################################################################
+ 
  JAP_zveno_loyalty_status:0 "[GetZvenoLoyaltyStatus]"
  JAP_zveno_loyalty_status_amount:0 "[?JAP.JAP_zveno_loyalty|0]"
  JAP_bs_loyalty_status:0 "[GetBsLoyaltyStatus]"
@@ -316,10 +319,16 @@
  JAP_loyalty_status_integrated:0 "§g統合された§!"
  JAP_popularity_status_crushed:0 "$JAP_loyalty_status_crushed$"
  JAP_popularity_status_integrated:0 "$JAP_loyalty_status_integrated$"
- JAP_zveno_name_text:0 "ズヴェノ"
- JAP_bs_name_text:0 "社会民主労働者党広義派"
+ 
+ ####################################################################################################
+ 
+ JAP_toseiha_name_text:0 "統制派"
+ JAP_kodoha_name_text:0 "皇道派"
  JAP_bzns_name_text:0 "農民同盟"
  JAP_nsm_name_text:0 "国家社会主義運動"
+ 
+ ####################################################################################################
+ 
  JAP_ZVENO_TOOLTIP:0 "£faction_JAP_zveno §Yズヴェノ§!は陸軍士官らによって設立された国家主義組織で現在、キモン・ゲオルギエフに率いられている。\n£faction_JAP_zveno §Yズヴェノ§!は陸軍士官らに組織参加を呼びかけており、時間がたてば、政府にクーデターを起こして、軍政を敷くこともできるだろう。"
  JAP_BS_TOOLTIP:0 "£faction_JAP_bs §Y社会民主労働者党広義派§!は幅広い層に支持される社会民主主義同盟である。\n£faction_JAP_bs §Y社会民主労働者党広義派§!は工場労働者や組合に大きな影響力を持っており、彼らが政府に対して不誠実であればゼネストを呼びかけるだろう。"
  JAP_BZNS_TOOLTIP:0 "£faction_JAP_bzns §Y農民同盟§!は1934年に禁止された政治団体で、農業問題に専念している。\n£faction_JAP_bzns §Y農民同盟§!は国内の農村地域で大きな影響力を持っており、農民の間で人気を得ようとしている。"
