一日でヨルダンNFが完成するわけねーだろ

--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -2796,6 +2796,12 @@
  STRAITS_ENG-GBR_colony_DEF:0 "$OVERLORDADJ$領海峡植民地"
  STRAITS_ENG-GBR_colony_ADJ:0 "$OVERLORDADJ$領海峡植民地"
  
+ TRANSJORDAN_emirate_mandate:0 "$OVERLORDADJ$委任統治領トランスヨルダン首長国"
+ TRANSJORDAN_emirate_mandate_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン首長国"
+ TRANSJORDAN_emirate_mandate_ADJ:0 "$OVERLORDADJ$領トランスヨルダン"
+ TRANSJORDAN_hashemite_kingdom_mandate:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_mandate_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_mandate_ADJ:0 "$OVERLORDADJ$委任統治領トランスヨルダン"
 #ヨーロッパ
  KAR-FIN_SOV_soviet_member_republic:0 "カレロ＝フィン・$OVERLORDADJ$共和国"
  KAR-FIN_SOV_soviet_member_republic_DEF:0 "カレロ＝フィン・$OVERLORDADJ$共和国"
