--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -85,6 +85,10 @@
  MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
  MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
  
+ TRANSJORDAN_emirate:0 "トランスヨルダン首長国"
+ TRANSJORDAN_emirate_DEF:0 "トランスヨルダン首長国"
+ TRANSJORDAN_emirate_ADJ:0 "トランスヨルダン"
+ 
  TRANSJORDAN_hashemite_kingdom:0 "トランスヨルダン・ハシミテ王国"
  TRANSJORDAN_hashemite_kingdom_DEF:0 "トランスヨルダン・ハシミテ王国"
  TRANSJORDAN_hashemite_kingdom_ADJ:0 "トランスヨルダン"
@@ -270,6 +274,10 @@
  IREandGBR_united_kingdom:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_DEF:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_ADJ:0 "アイルランド"
+ 
+ JERUSALEM-RHODESandMALTA_SAINTJOHN_sovereign_military_hospitaller_order:0 "エルサレム、ロードス及びマルタにおける聖ヨハネ主権軍事病院騎士修道会"
+ JERUSALEM-RHODESandMALTA_SAINTJOHN_sovereign_military_hospitaller_order_DEF:0 "エルサレム、ロードス及びマルタにおける聖ヨハネ主権軍事病院騎士修道会"
+ JERUSALEM-RHODESandMALTA_SAINTJOHN_sovereign_military_hospitaller_order_ADJ:0 "マルタ騎士団"
  
  LIEandALS_united_principality:0 "リヒテンシュタイン及びアラスカ連合侯国"
  LIEandALS_united_principality_DEF:0 "リヒテンシュタイン及びアラスカ連合侯国"
