--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1095,6 +1095,10 @@
  ATS_DEF:0 "アトス"
  ATS_ADJ:0 "アトス"
  
+ BLT:0 "バルト"
+ BLT_DEF:0 "バルト"
+ BLT_ADJ:0 "バルト"
+ 
  BRL:0 "ベルリン"
  BRL_DEF:0 "ベルリン"
  BRL_ADJ:0 "ベルリン"
