--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -135,6 +135,8 @@
  JAP_state:0 "日本國"
  JAP_state_DEF:0 "日本國"
  
+ JOR_emirate:0 "ヨルダン首長国"
+ JOR_emirate_DEF:0 "ヨルダン首長国"
  JOR_hashemite_kingdom:0 "ヨルダン・ハシミテ王国"
  JOR_hashemite_kingdom_DEF:0 "ヨルダン・ハシミテ王国"
  JOR_kingdom:0 "ヨルダン王国"
@@ -1656,6 +1658,9 @@
  
  ATS_monastic_republic:0 "アトス修道士共和国"
  ATS_monastic_republic_DEF:0 "アトス修道士共和国"
+ 
+ BLT_united_duchy:0 "バルト連合公国"
+ BLT_united_duchy_DEF:0 "バルト連合公国"
  
  BRL_free_city:0 "自由都市ベルリン"
  BRL_free_city_DEF:0 "自由都市ベルリン"
