--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -6,13 +6,13 @@
  LOADING_MAP_SPRITES:0 "制作中..."
  AUTOSAVING:0 "制作中..."
  AUTOSAVING_OOS_DUMP:0 "制作中... \n$DUMP_NAME$"
- LOAD_GFX_PDXMAP_SHADERS:0 "制作中..."
- LOAD_GFX_PDXMAP_TERRAIN:0 "制作中..."
- LOAD_GFX_PDXMAP_BORDERS:0 "制作中..."
- LOAD_GFX_PDXMAP_TEXTURES:0 "制作中..."
- LOAD_GFX_PDXMAP_TREES:0 "制作中..."
- LOAD_GFX_PDXMAP_RIVERS:0 "制作中..."
- LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "制作中..."
+ LOAD_GFX_PDXMAP_SHADERS:0 "イギリス連邦を構成中..."
+ LOAD_GFX_PDXMAP_TERRAIN:0 "ド・ゴールが臨時政府主席に就任中..."
+ LOAD_GFX_PDXMAP_BORDERS:0 " フレンスブルク政府が解散中..."
+ LOAD_GFX_PDXMAP_TEXTURES:0 "王政廃止に関する国民投票中..."
+ LOAD_GFX_PDXMAP_TREES:0 "大東亞共榮圈を建設中..."
+ LOAD_GFX_PDXMAP_RIVERS:0 "コミンフォルムを設立中..."
+ LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "東京宣言を受諾中..."
  LOAD_INIT:0 "制作中..."
  LOAD_EVENTS:0 "制作中..."
  LOAD_GFX:0 "制作中..."
