--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 #ローディング
- LOADING_GUI:0 "制作中..."
- LOADING_HISTORY:0 "制作中..."
+ LOADING_GUI:0 "アフリカ植民地から撤退中..."
+ LOADING_HISTORY:0 "華北戦線に転進中..."
  LOADING_DATABASES:0 "制作中..."
  LOADING_MAP_SPRITES:0 "制作中..."
  AUTOSAVING:0 "制作中..."
