--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -83,7 +83,7 @@
  LOADING_TIP_81: "ベルギーは道ではない。国だ!\n- 軍人の王"
  LOADING_TIP_82: "明石元二郎一人で、満州の日本軍20万人に匹敵する戦果を上げている。\n- ヴィルヘルム2世"
  LOADING_TIP_83: "あんたらを葬ってやる！\n- ニキータ・フルシチョフ"
- LOADING_TIP_84: "\n- "
+ LOADING_TIP_84: "さあ国民よ起て！そして嵐よ起きよ！\n- ヨーゼフ・ゲッベルス"
  LOADING_TIP_85: "\n- "
  LOADING_TIP_86: "\n- "
  LOADING_TIP_87: "\n- "
