--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -374,6 +374,8 @@
  AUS_federal_state_DEF:0 "オーストリア連邦国"
  AUS_republic:0 "オーストリア共和国"
  AUS_republic_DEF:0 "オーストリア共和国"
+ AUS_GER_republic:0 "ドイツ・オーストリア共和国"
+ AUS_GER_republic_DEF:0 "ドイツ・オーストリア共和国"
  
  BAY_duchy:0 "バイエルン公国"
  BAY_duchy_DEF:0 "バイエルン公国"
