--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -295,7 +295,7 @@
  JAP_ui_faction_header:0 "派閥"
  JAP_ui_loyalty_header:0 "忠誠"
  JAP_ui_popularity_header:0 "支持率"
- JAP_a_royal_visit:0 "天皇の行幸"
+ JAP_a_royal_visit:0 "天皇陛下の行幸"
  
  ####################################################################################################
  
@@ -324,8 +324,8 @@
  
  JAP_toseiha_name_text:0 "統制派"
  JAP_kodoha_name_text:0 "皇道派"
- JAP_bzns_name_text:0 "農民同盟"
- JAP_nsm_name_text:0 "国家社会主義運動"
+ JAP_fleet_faction_name_text:0 "艦隊派"
+ JAP_treaty_faction_name_text:0 "条約派"
  
  ####################################################################################################
  
