--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -327,14 +327,15 @@
  JAP_fleet_faction_name_text:0 "艦隊派"
  JAP_treaty_faction_name_text:0 "条約派"
  
+ JAP_TOSEIHA_TOOLTIP:0 "£faction_JAP_toseiha §Y統制派§!は当初は暴力革命的手段による国家革新を企図していたが、あくまでも国家改造のため直接行動も辞さなかった皇道派青年将校と異なり、その態度を一変し、陸軍大臣を通じて政治上の要望を実現するという合法的な形で列強に対抗し得る「高度国防国家」の建設を目指した軍閥。\n£faction_JAP_zveno §Y統制派§!は。"
+ JAP_KODOHA_TOOLTIP:0 "£faction_JAP_kodoha §Y皇道派§!は天皇親政の下での国家改造を目指し、対外的にはソビエト連邦との対決を志向した軍閥。\n£faction_JAP_kodoha §Y皇道派§!は。"
+ JAP_FLEET_FACTION_TOOLTIP:0 "£faction_JAP_fleet_faction §Y艦隊派§!はロンドン海軍軍縮条約に反対した軍閥。\n£faction_JAP_fleet_faction §Y艦隊派§!は。"
+ JAP_TREATY_FACTION_TOOLTIP:0 "£faction_JAP_treaty_faction §Y条約派§!はロンドン海軍軍縮条約に賛成した軍閥。\n£faction_JAP_treaty_faction §Y条約派§!は。"
+ JAP_LOYALTY_TOOLTIP:0 "§Y忠誠心§!は派閥が政府に協力する意向を表している。\n§Y忠誠心§!が高いほど、派閥が政府に立ち向かう可能性は低くなる。\n派閥を政府に統合するには、特定のディシジョンを完了することで、その構成員を政府と連携させ、§Y忠誠心§!を100まで上昇させる必要がある。"
+ JAP_POPULARITY_TOOLTIP:0 "§Y支持率§!は派閥が特定の人口層から受ける支持を表している。\n§Y支持率§!が高いほど、派閥が政府に立ち向かう可能性は高くなる。\n派閥を撲滅するためには、特定のディシジョンを完了することで、派閥を弱体化させて§Y支持率§!を0まで減らす必要がある。"
+ 
  ####################################################################################################
  
- JAP_ZVENO_TOOLTIP:0 "£faction_JAP_zveno §Yズヴェノ§!は陸軍士官らによって設立された国家主義組織で現在、キモン・ゲオルギエフに率いられている。\n£faction_JAP_zveno §Yズヴェノ§!は陸軍士官らに組織参加を呼びかけており、時間がたてば、政府にクーデターを起こして、軍政を敷くこともできるだろう。"
- JAP_BS_TOOLTIP:0 "£faction_JAP_bs §Y社会民主労働者党広義派§!は幅広い層に支持される社会民主主義同盟である。\n£faction_JAP_bs §Y社会民主労働者党広義派§!は工場労働者や組合に大きな影響力を持っており、彼らが政府に対して不誠実であればゼネストを呼びかけるだろう。"
- JAP_BZNS_TOOLTIP:0 "£faction_JAP_bzns §Y農民同盟§!は1934年に禁止された政治団体で、農業問題に専念している。\n£faction_JAP_bzns §Y農民同盟§!は国内の農村地域で大きな影響力を持っており、農民の間で人気を得ようとしている。"
- JAP_NSM_TOOLTIP:0 "£faction_JAP_nsm §Y国家社会主義運動§!は元ズヴェノのアレクサンダル・ツァンコフ率いる極右組織である。\n£faction_JAP_nsm §Y国家社会主義運動§!は全国各地でデモや抗議活動を行うことで、大衆の人気を得ようとしている。"
- JAP_LOYALTY_TOOLTIP:0 "§Y忠誠心§!は派閥が政府に協力する意向を表している。\n§Y忠誠心§!が高いほど、派閥が政府に立ち向かう可能性は低くなる。\n派閥を政府に統合するには、特定のディシジョンを完了することで、その構成員を政府と連携させ、§Y忠誠心§!を100まで上昇させる必要がある。"
- JAP_POPULARITY_TOOLTIP:0 "§Y支持率§!は派閥が特定の人口層（軍、労働者、農民、急進右翼）から受ける支持を表している。\n§Y支持率§!が高いほど、派閥が政府に立ち向かう可能性は高くなる。\n派閥を撲滅するためには、特定のディシジョンを完了することで、派閥を弱体化させて§Y支持率§!を0まで減らす必要がある。"
  JAP_cooperation_zveno_speech:0 "[GetZvenoName]の演説を許可"
  JAP_cooperation_zveno_speech_desc:0 "[GetZvenoName]が経済及び社会政策、産業計画、農業改革に関する提案について演説することを許可する。"
  JAP_cooperation_bs_speech:0 "[GetBsName]の演説を許可"
