国旗の追加

--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -1513,6 +1513,12 @@
  NZL_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NZL_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NZL_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NZL_imperial_member:0 "$OVERLORDADJ$領青照亜羅亜王国"
+ NZL_imperial_member_DEF:0 "$OVERLORDADJ$領青照亜羅亜王国"
+ NZL_imperial_member_ADJ:0 "$OVERLORDADJ$領青照亜羅亜"
+ NZL_imperial_overseas_territory:0 "$OVERLORDADJ$領青照亜羅亜"
+ NZL_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領青照亜羅亜"
+ NZL_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領青照亜羅亜"
  
  PNG_mandate:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
  PNG_mandate_DEF:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
