--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -393,6 +393,10 @@
  PRU-BOL_confederation_ADJ:0 "ペルー＝ボリビア"
  
 #大洋州
+ AOTEAROA_united_tribes:0 "アオテアロア部族連合"
+ AOTEAROA_united_tribes_DEF:0 "アオテアロア部族連合"
+ AOTEAROA_united_tribes_ADJ:0 "アオテアロア"
+ 
  COOKISLANDS_federation_ENG:0 "クック諸島連邦"
  COOKISLANDS_federation_ENG_DEF:0 "クック諸島連邦"
  
