--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1202,6 +1202,8 @@
  
  NZL_kingdom:0 "ニュージーランド王国"
  NZL_kingdom_DEF:0 "ニュージーランド王国"
+ NZL_united_tribes:0 "ニュージーランド部族連合"
+ NZL_united_tribes_DEF:0 "ニュージーランド部族連合"
  
  PNG_independent_state:0 "パプアニューギニア独立国"
  PNG_independent_state_DEF:0 "パプアニューギニア独立国"
