--- a/localisation/_geacps_politics_l_english.yml
+++ b/localisation/_geacps_politics_l_english.yml
@@ -31,6 +31,7 @@
  
 #RUS
  POLITICS_NIKOLAI_SHVERNIK_DESC:0 "1888年、サンクトペテルブルクに生まれる。1905年にロシア社会民主労働党に入党。のち同党がボリシェヴィキとメンシェヴィキに分裂すると、ボリシェヴィキ側に付いた。ロシア革命後の1924年、ロシア・ソビエト連邦社会主義共和国の人民委員に就任し、翌1925年には党中央委員に選出された。1927年にウラル地方の党書記に降格されるが、ヨシフ・スターリンの五カ年計画に基づく重工業化に対する熱心な唱道者であったため、政治的に復権を果たした。\n1929年にモスクワに戻り、冶金労働者組合議長に就任、共産党組織局員兼書記に選出された。1930年全ソ労組中央評議会第一書記に就任し、1944年までこの地位にいた。1939年にはソ連共産党政治局員候補に選出された。\n第二次世界大戦中、シュヴェルニクはおもにヨーロッパ・ロシアの産業をナチス・ドイツの侵攻からウラル以東に疎開させる役割を担った。戦後の1946年、ミハイル・カリーニンの跡を引継いでソ連の国家元首に相当する最高会議幹部会議長に選出された。"
+ POLITICS_VLADIMIR_LENIN_DESC:0 "ロシア社会民主労働党ボリシェヴィキ派の指導者として活動し、1917年に十月革命を成功させた後、史上初の社会主義国家であるロシア・ソビエト連邦社会主義共和国を樹立し、その行政府である人民委員会議の議長に就任した。1918年にはボリシェヴィキによる一党独裁体制を確立させ、また党名をロシア共産党へと改めた。1919年には第二インターナショナルに代わる共産主義政党の国際組織としてコミンテルンの創設を主導、その後1922年にはソビエト連邦の成立に深く関与した。マルクス主義者として政治、経済の分析から哲学に至るまでさまざまな著作を残し、その思想はレーニン主義として継承された。"	#ハロウィン
 
 #JAP
  POLITICS_HIROHITO_DESC:0 "昭和天皇は、日本の第124代天皇。諱は裕仁、御称号は迪宮。お印は若竹。\n1921年11月25日から1926年12月25日までの5年余りに渡って、父帝・大正天皇の健康状態の悪化により、摂政宮となった。\n在位中に大東亜戦争を挟み、大日本帝国憲法下の「統治権の総攬者」としての天皇を経験した天皇である。"
