NSB用国家タグ追加2

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
 #アジア
+ ABK:0 "アブハジア"
+ ABK_DEF:0 "アブハジア"
+ ABK_ADJ:0 "アブハジア"
+ 
  AFG:0 "アフガニスタン"
  AFG_DEF:0 "アフガニスタン"
  AFG_ADJ:0 "アフガニスタン"
@@ -23,6 +27,10 @@
  BRM:0 "ビルマ"
  BRM_DEF:0 "ビルマ"
  BRM_ADJ:0 "ビルマ"
+ 
+ BUK:0 "ブハラ"
+ BUK_DEF:0 "ブハラ"
+ BUK_ADJ:0 "ブハラ"
  
  CAM:0 "カンボジア"
  CAM_DEF:0 "カンボジア"
@@ -196,6 +204,10 @@
  VIN_DEF:0 "ベトナム"
  VIN_ADJ:0 "ベトナム"
  
+ YAM:0 "ヤマリア"
+ YAM_DEF:0 "ヤマリア"
+ YAM_ADJ:0 "ヤマリア"
+ 
  YEM:0 "イエメン"
  YEM_DEF:0 "イエメン"
  YEM_ADJ:0 "イエメン"
@@ -249,6 +261,10 @@
  COR_DEF:0 "コルシカ"
  COR_ADJ:0 "コルシカ"
  
+ CRI:0 "クリミア"
+ CRI_DEF:0 "クリミア"
+ CRI_ADJ:0 "クリミア"
+ 
  CRO:0 "クロアチア"
  CRO_DEF:0 "クロアチア"
  CRO_ADJ:0 "クロアチア"
@@ -264,6 +280,14 @@
  DEN:0 "デンマーク"
  DEN_DEF:0 "デンマーク"
  DEN_ADJ:0 "デンマーク"
+ 
+ DNZ:0 "ダンツィヒ"
+ DNZ_DEF:0 "ダンツィヒ"
+ DNZ_ADJ:0 "ダンツィヒ"
+ 
+ DON:0 "ドン"
+ DON_DEF:0 "ドン"
+ DON_ADJ:0 "ドン"
  
  EGR:0 "東ドイツ"
  EGR_DEF:0 "東ドイツ"
@@ -324,6 +348,10 @@
  ITA:0 "イタリア"
  ITA_DEF:0 "イタリア"
  ITA_ADJ:0 "イタリア"
+ 
+ KAR:0 "カレリア"
+ KAR_DEF:0 "カレリア"
+ KAR_ADJ:0 "カレリア"
  
  KOS:0 "コソボ"
  KOS_DEF:0 "コソボ"
@@ -822,10 +850,6 @@
  
 ###################
 #アジア
- ABK:0 "アブハジア"
- ABK_DEF:0 "アブハジア"
- ABK_ADJ:0 "アブハジア"
- 
  ANH:0 "安徽"
  ANH_DEF:0 "安徽"
  ANH_ADJ:0 "安徽"
@@ -837,10 +861,6 @@
  BAL:0 "バルーチスターン"
  BAL_DEF:0 "バルーチスターン"
  BAL_ADJ:0 "バルーチスターン"
- 
- BHK:0 "ブハラ"
- BHK_DEF:0 "ブハラ"
- BHK_ADJ:0 "ブハラ"
  
  BHR:0 "バーレーン"
  BHR_DEF:0 "バーレーン"
@@ -1066,10 +1086,6 @@
  XIZ_DEF:0 "西藏"
  XIZ_ADJ:0 "西藏"
  
- YML:0 "ヤマリア"
- YML_DEF:0 "ヤマリア"
- YML_ADJ:0 "ヤマリア"
- 
  ZHI:0 "直隷"
  ZHI_DEF:0 "直隷"
  ZHI_ADJ:0 "直隷"
@@ -1103,21 +1119,9 @@
  BRL_DEF:0 "ベルリン"
  BRL_ADJ:0 "ベルリン"
  
- CRI:0 "クリミア"
- CRI_DEF:0 "クリミア"
- CRI_ADJ:0 "クリミア"
- 
  DAL:0 "ダルマチア"
  DAL_DEF:0 "ダルマチア"
  DAL_ADJ:0 "ダルマチア"
- 
- DNZ:0 "ダンツィヒ"
- DNZ_DEF:0 "ダンツィヒ"
- DNZ_ADJ:0 "ダンツィヒ"
- 
- DON:0 "ドン"
- DON_DEF:0 "ドン"
- DON_ADJ:0 "ドン"
  
  FLN:0 "フランドル"
  FLN_DEF:0 "フランドル"
@@ -1150,10 +1154,6 @@
  JER:0 "ジャージー"
  JER_DEF:0 "ジャージー"
  JER_ADJ:0 "ジャージー"
- 
- KAR:0 "カレリア"
- KAR_DEF:0 "カレリア"
- KAR_ADJ:0 "カレリア"
  
  LIE:0 "リヒテンシュタイン"
  LIE_DEF:0 "リヒテンシュタイン"
