--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 #アジア
+ ABK_republic:0 "アブハジア共和国"
+ ABK_republic_DEF:0 "アブハジア共和国"
+ 
  AFG_emirate:0 "アフガニスタン首長国"
  AFG_emirate_DEF:0 "アフガニスタン首長国"
  AFG_islamic_emirate:0 "アフガニスタン・イスラム首長国"
@@ -55,6 +58,15 @@
  BRM_union_republic_total_socialism_DEF:0 "ビルマ連邦社会主義共和国"
  BRM_union_republic_radical_socialism:0 "ビルマ連邦社会主義共和国"
  BRM_union_republic_radical_socialism_DEF:0 "ビルマ連邦社会主義共和国"
+ 
+ BUK_emirate:0 "ブハラ首長国"
+ BUK_emirate_DEF:0 "ブハラ首長国"
+ BUK_republic:0 "ブハラ共和国"
+ BUK_republic_DEF:0 "ブハラ共和国"
+ BUK_republic_total_socialism:0 "ブハラ人民共和国"
+ BUK_republic_total_socialism_DEF:0 "ブハラ人民共和国"
+ BUK_republic_radical_socialism:0 "ブハラ人民共和国"
+ BUK_republic_radical_socialism_DEF:0 "ブハラ人民共和国"
  
  CAM_kingdom:0 "カンボジア王国"
  CAM_kingdom_DEF:0 "カンボジア王国"
@@ -329,6 +341,9 @@
  VIN_state:0 "ベトナム国"
  VIN_state_DEF:0 "ベトナム国"
  
+ YAM_republic:0 "ヤマリア共和国"
+ YAM_republic_DEF:0 "ヤマリア共和国"
+ 
  YEM_arab_republic:0 "イエメン・アラブ共和国"
  YEM_arab_republic_DEF:0 "イエメン・アラブ共和国"
  YEM_mutawakkilite_kingdom:0 "イエメン・ムタワッキリテ王国"
@@ -437,6 +452,11 @@
  COR_republic:0 "コルシカ共和国"
  COR_republic_DEF:0 "コルシカ共和国"
  
+ CRI_peoples_republic:0 "クリミア人民共和国"
+ CRI_peoples_republic_DEF:0 "クリミア人民共和国"
+ CRI_republic:0 "クリミア共和国"
+ CRI_republic_DEF:0 "クリミア共和国"
+ 
  CRO_independent_state:0 "クロアチア独立国"
  CRO_independent_state_DEF:0 "クロアチア独立国"
  CRO_kingdom:0 "クロアチア王国"
@@ -466,6 +486,12 @@
  
  DEN_kingdom:0 "デンマーク王国"
  DEN_kingdom_DEF:0 "デンマーク王国"
+ 
+ DNZ_free_city:0 "自由都市ダンツィヒ"
+ DNZ_free_city_DEF:0 "自由都市ダンツィヒ"
+ 
+ DON_republic:0 "ドン共和国"
+ DON_republic_DEF:0 "ドン共和国"
  
  EGR_republic:0 "東ドイツ共和国"
  EGR_republic_DEF:0 "東ドイツ共和国"
@@ -581,6 +607,9 @@
  ITA_republic_national_populism_DEF:0 "イタリア社会共和国"
  ITA_republic_bonaparte:0 "イタリア共和国"
  ITA_republic_bonaparte_DEF:0 "イタリア共和国"
+ 
+ KAR_republic:0 "カレリア共和国"
+ KAR_republic_DEF:0 "カレリア共和国"
  
  KOS_republic:0 "コソボ共和国"
  KOS_republic_DEF:0 "コソボ共和国"
@@ -1223,9 +1252,6 @@
  
 ##GEACPS
 #アジア
- ABK_republic:0 "アブハジア共和国"
- ABK_republic_DEF:0 "アブハジア共和国"
- 
  ANH_minguo:0 "安徽民国"
  ANH_minguo_DEF:0 "安徽民国"
  ANH_republic:0 "安徽共和国"
@@ -1240,15 +1266,6 @@
  
  BAL_united_kingdom:0 "バルーチスターン連合王国"
  BAL_united_kingdom_DEF:0 "バルーチスターン連合王国"
- 
- BHK_emirate:0 "ブハラ首長国"
- BHK_emirate_DEF:0 "ブハラ首長国"
- BHK_republic:0 "ブハラ共和国"
- BHK_republic_DEF:0 "ブハラ共和国"
- BHK_republic_total_socialism:0 "ブハラ人民共和国"
- BHK_republic_total_socialism_DEF:0 "ブハラ人民共和国"
- BHK_republic_radical_socialism:0 "ブハラ人民共和国"
- BHK_republic_radical_socialism_DEF:0 "ブハラ人民共和国"
  
  BHR_kingdom:0 "バーレーン王国"
  BHR_kingdom_DEF:0 "バーレーン王国"
@@ -1625,9 +1642,6 @@
  XIZ_warlord:0 "西藏軍閥"
  XIZ_warlord_DEF:0 "西藏軍閥"
  
- YML_republic:0 "ヤマリア共和国"
- YML_republic_DEF:0 "ヤマリア共和国"
- 
  ZHI_minguo:0 "直隷民国"
  ZHI_minguo_DEF:0 "直隷民国"
  ZHI_republic:0 "直隷共和国"
@@ -1669,21 +1683,10 @@
  BRL_free_city:0 "自由都市ベルリン"
  BRL_free_city_DEF:0 "自由都市ベルリン"
  
- CRI_peoples_republic:0 "クリミア人民共和国"
- CRI_peoples_republic_DEF:0 "クリミア人民共和国"
- CRI_republic:0 "クリミア共和国"
- CRI_republic_DEF:0 "クリミア共和国"
- 
  DAL_republic:0 "ダルマチア共和国"
  DAL_republic_DEF:0 "ダルマチア共和国"
  DAL_kingdom:0 "ダルマチア王国"
  DAL_kingdom_DEF:0 "ダルマチア王国"
- 
- DNZ_free_city:0 "自由都市ダンツィヒ"
- DNZ_free_city_DEF:0 "自由都市ダンツィヒ"
- 
- DON_republic:0 "ドン共和国"
- DON_republic_DEF:0 "ドン共和国"
  
  FLN_kingdom:0 "フランドル王国"
  FLN_kingdom_DEF:0 "フランドル王国"
@@ -1711,9 +1714,6 @@
  
  JER_republic:0 "ジャージー共和国"
  JER_republic_DEF:0 "ジャージー共和国"
- 
- KAR_republic:0 "カレリア共和国"
- KAR_republic_DEF:0 "カレリア共和国"
  
  LIE_principality:0 "リヒテンシュタイン侯国"
  LIE_principality_DEF:0 "リヒテンシュタイン侯国"
