NSB用国家タグ追加4

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1146,6 +1146,10 @@
  SKM_DEF:0 "シッキム"
  SKM_ADJ:0 "シッキム"
  
+ SOA:0 "南オセチア"
+ SOA_DEF:0 "南オセチア"
+ SOA_ADJ:0 "南オセチア"
+ 
  SRW:0 "サラワク"
  SRW_DEF:0 "サラワク"
  SRW_ADJ:0 "サラワク"
