特に意味なし

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -92,9 +92,9 @@
  JAP_Education_for_the_Borneo_Volunteer_Army:0 "ボルネオ義勇軍の教育"
  JAP_The_Southern_Approach:0 "南進論"
  JAP_Our_relationship_with_the_collapsed_free_world:0 "崩壊した自由の國との関係"
- JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "フィリピンでのスペイン語の使用の禁止を撤回"
+ JAP_Ban_on_the_use_of_Spanish_in_the_Philippines_revoked:0 "比島でのスペイン語の使用の禁止を撤回"
  JAP_Timor_return:0 "ティモール返還"
- JAP_Alaska_heights_expand:0 "阿拉斯加へ影響力拡大"
+ JAP_Alaska_heights_expand:0 "アラスカへ影響力拡大"
  JAP_Extension_of_influence_in_Californian:0 "加利福尼亜へ影響力拡大"
  JAP_Eastern_Progressive_Theory:0 "東進論"
  JAP_The_relationship_with_the_missing_red_star:0 "欠けた赤い星との関係"
