--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -111,7 +111,7 @@
  JAP_Martial_law_throughout_the_country:0 "全國での戒嚴令"
  JAP_Start_of_the_Showa_Restoration:0 "昭和維新を開始"
  JAP_Elimination_of_the_privileged_class:0 "特権階級の排除"
- JAP_Formation_of_Konoe_New_Party:0 "近衛新党を結成"
+ JAP_Formation_of_Konoe_New_Party:0 "近衛新党を結成"#大日本党
  JAP_Re-acceleration_of_the_new_regime_movement:0 "新体制運動を再加速"
  JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動を加速"
  JAP_Building_the_Pacific_Economic_Bloc:0 "太平洋経済ブロックの構築"
