--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,7 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_4876:0 "斉斉哈爾"
  VICTORY_POINTS_10011:0 "対馬"
  VICTORY_POINTS_7145:0 "隠岐諸島"
  VICTORY_POINTS_9952:0 "佐渡"
