--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,7 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_892:0 "営口"
  VICTORY_POINTS_4876:0 "斉斉哈爾"
  VICTORY_POINTS_10011:0 "対馬"
  VICTORY_POINTS_7145:0 "隠岐諸島"
@@ -305,7 +306,7 @@
  VICTORY_POINTS_4052:0 "平壌"
  VICTORY_POINTS_4056:0 "釜山"
  VICTORY_POINTS_7125:0 "京城"
- VICTORY_POINTS_10433:0 "ハルピン"
+ VICTORY_POINTS_10433:0 "哈爾浜"
  VICTORY_POINTS_11771:0 "奉天"
  VICTORY_POINTS_10265:0 "マニラ"
  VICTORY_POINTS_1221:0 "バタンガス"
