--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,11 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_9759:0 "通化"
+ VICTORY_POINTS_7663:0 "吉林"
+ VICTORY_POINTS_10612:0 "満洲里"
+ VICTORY_POINTS_4745:0 "海拉爾"
+ VICTORY_POINTS_945:0 "安東"
  VICTORY_POINTS_892:0 "営口"
  VICTORY_POINTS_4876:0 "斉斉哈爾"
  VICTORY_POINTS_10011:0 "対馬"
