--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,7 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_7897:0 "北安"
  VICTORY_POINTS_9759:0 "通化"
  VICTORY_POINTS_7663:0 "吉林"
  VICTORY_POINTS_10612:0 "満洲里"
