キャラクター途中経過

--- a/localisation/_geacps_characters_l_english.yml
+++ b/localisation/_geacps_characters_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_englsih:
+﻿l_english:
 ##アジア
 #AFG-アフガニスタン
  CHARACTER_mohammed_zahir_shah:0 "ムハンマド・ザーヒル・シャー"
@@ -23,7 +23,7 @@
  CHARACTER_khoja_niyaz:0 "ホージャ・ニヤーズ"
  
 #JAP-日本
- CHARACTER_showa_emperor:0 "昭和天皇"
+ JAP_reigning_emperor:0 "今上天皇"
  CHARACTER_fumimaro_konoe:0 "近衛文麿"
  CHARACTER_hideki_tojo:0 "東條英機"
  CHARACTER_hisaichi_terauchi:0 "寺内寿一"
