--- a/localisation/english/_geacps_political_tab_l_english.yml
+++ b/localisation/english/_geacps_political_tab_l_english.yml
@@ -1,17 +1,33 @@
 ﻿l_english:
+#政府形態
  government_forms:0 "政府形態"
  power_structure:0 "国家体制"
  power_source:0 "社会体制"
  power_ideology:0 "統治体制"
+ 
+#内閣
  cabinet:0 "内閣"
  head_of_government:0 "政府首班"
+ foreign_minister:0 "外務大臣"
+ home_minister:0 "内務大臣"
+ commerce_minister:0 "商工大臣"
+ military_minister:0 "軍政大臣"
+ army_minister:0 "陸軍大臣"
+ navy_minister:0 "海軍大臣"
+ air_force_minister:0 "空軍大臣"
  political_advisor:0 "政府顧問"
+ 
+#法律
  law_category:0 "法律"
  economy:0 "経済法"
  trade_laws:0 "貿易法"
  mobilization_laws:0 "徴兵法"
- company_category:0 "企業"
+
+#軍部
  military_category:0 "軍部"
+
+#その他
+ company_category:0 "企業"
 
 #政治体制
  anarchy:0 "無政府"
@@ -24,3 +40,4 @@
 #統治体制
  monarchy:0 "君主制"
  republic:0 "共和制"
+ 
