--- a/localisation/_geacps_politics_l_english.yml
+++ b/localisation/_geacps_politics_l_english.yml
@@ -19,6 +19,18 @@
  CHARACTER_keisuke_okada:0 "岡田啓介"
  CHARACTER_mitsumasa_yonai:0 "米内光政"
  
+#MAN-満州
+ CHARACTER_hsuan_tung_emperor:0 "宣統帝"
+ CHARACTER_kangde_emperor:0 "康徳帝"
+ CHARACTER_aisin-gioro_puyi:0 "愛新覚羅溥儀"
+ CHARACTER_aisin-gioro_puyi_desc:0 "「執政」就任の2年後、1934年3月1日にようやく溥儀は満洲国皇帝の座に就き、康徳帝となる。「清」と「満州」という2つの帝国で正式に3回皇帝に即位したのは溥儀のみである。\n溥儀の皇帝即位に併せて、それまでは「満州国」と呼ばれていた国名も「満洲帝国」と呼ばれることが多くなった。元号も正式に「康徳」に変更された。同時に紫禁城時代からの教育掛で、満洲国総理内務府大臣でもあり、建国前に溥儀と日本陸軍との間を取り持ったことから関東軍からの評価が高かった鄭孝胥が国務院総理に就任した。\n同日に新京市内で行われた皇帝即位式の際に溥儀は、満洲国のスローガンの1つである「五族協和」を掲げる上で、満洲族の民族色を出すことを嫌った関東軍からの強い勧めで満洲国軍の軍服着用で行われた。\nしかし、満州族としての意識が強い溥儀の強い依頼により、新京市内の順天広場に置かれた特設会場にて、即位式に先立って即位を清朝の先祖に報告する儀式である「告天礼」が行われ、この際に溥儀は満洲族の民族衣装である龍袍を着用した。しかし同時に満洲国政府からは「これは清朝の復辟を意味しない」旨の声明が出されていた。\n溥儀の皇宮は、執政当時と同様に満洲国の首都の新京の中心部に置かれた。皇帝に即位した当初溥儀夫妻は内廷の緝煕楼に住んでいたが、「皇宮とするには狭く威厳が足りない」と考えた満洲国政府により、1938年に新たに同徳殿が皇宮として建てられた。しかし、関東軍による盗聴を恐れて溥儀自身は一度も皇宮として利用しなかった。"
+ 
+#MEN-蒙古
+ CHARACTER_de_king:0 "徳王"
+ CHARACTER_demuchukedonglupu:0 "德穆楚克棟魯普"
+ CHARACTER_demchugdongrub:0 "デムチュクドンロブ"
+ CHARACTER_demchugdongrub_desc:0 "満州事変勃発後、徳王は日本軍と連絡を取り合うようになり、同じ内蒙古自治運動を指導していたユンデン・ワンチュクなどともに1933年に内蒙古王公会議を結成。国民政府に対して高度な自治を要求した。これを認める形で翌1934年に蒙古地方自治政務委員会が成立、徳王は秘書長となった。\nその後1936年2月10日に関東軍の支持の下蒙古軍政府が成立すると総司令・総裁に就任。1936年11月に徳王麾下の内蒙軍や李守信と王英などの部隊が関東軍の後援をたのんで綏遠省に進出し、同省主席の傅作義軍に撃退された。盧溝橋事件の後に日本は内蒙古方面へ本格的に出兵し、1937年10月17日に包頭を占領。雲王・徳王・李守信はこれに応じる形で10月28日に厚和にて蒙古聯盟自治政府を成立させた。当初、雲王が主席となり、翌年3月に雲王が病没すると、徳王が後任の主席となった。1938年10月、徳王は初めて訪日した。準国賓待遇を受け天皇に拝謁し、勲一等旭日章を受勲した。蒙古聯盟自治政府は、1939年9月1日に察南自治政府・晋北自治政府と合併し蒙古聯合自治政府となった。首都は張家口に置かれ、名目としては汪兆銘政権下の自治政府という位置づけだった。1941年2月徳王は二度目の訪日を行った。自治国として承認させることであったが、承認しなかった。1942年東條首相は大東亜共栄圏の首脳を招いたが、徳王は出席しなかった。"
+ 
 #SIA-シャム
  CHARACTER_rama_viii:0 "ラーマ8世"
  CHARACTER_ananda_mahidol:0 "アーナンタ・マヒドン"
