VP追加と満鉄敷設計画

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,10 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_1627:0 "白城"
+ VICTORY_POINTS_6863:0 "東安"
+ VICTORY_POINTS_814:0 "承徳"
+ VICTORY_POINTS_11855:0 "赤峰"
  VICTORY_POINTS_7897:0 "北安"
  VICTORY_POINTS_9759:0 "通化"
  VICTORY_POINTS_7663:0 "吉林"
