--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,14 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_6822:0 "清津"
+ VICTORY_POINTS_10110:0 "木浦"
+ VICTORY_POINTS_10083:0 "元山"
+ VICTORY_POINTS_4126:0 "群山"
+ VICTORY_POINTS_11835:0 "新義州"
+ VICTORY_POINTS_7221:0 "仁川"
+ VICTORY_POINTS_9790:0 "鎮南浦"
+ VICTORY_POINTS_4086:0 "大邱"
  VICTORY_POINTS_1627:0 "白城"
  VICTORY_POINTS_6863:0 "東安"
  VICTORY_POINTS_814:0 "承徳"
@@ -314,7 +322,7 @@
  VICTORY_POINTS_1150:0 "大連"
  VICTORY_POINTS_4572:0 "新京"
  VICTORY_POINTS_4052:0 "平壌"
- VICTORY_POINTS_4056:0 "釜山"
+ VICTORY_POINTS_12060:0 "釜山"
  VICTORY_POINTS_7125:0 "京城"
  VICTORY_POINTS_10433:0 "哈爾浜"
  VICTORY_POINTS_11771:0 "奉天"
